--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <img src="images/Jack.png" class="user-icon">
         </div>
     </nav>
+    <div class="class">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto suscipit maxime obcaecati! Velit laborum, provident molestias repudiandae minus officia. Quaerat!</p>
+    </div>
 </body>
 
 </html>
